<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="93dp"
        android:layout_height="41dp"
        android:text="@string/tEmail"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="243dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:text="@string/tData"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="133dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:text="@string/tPassword"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="317dp" />

    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/txEmail"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="247dp" />

    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberPassword"
        android:text="@string/txPassword"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="317dp" />
</androidx.constraintlayout.widget.ConstraintLayout>