<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="111dp"
        android:layout_height="44dp"
        android:text="@string/IDaftar"
        android:textSize="15pt"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="35dp" />

    <EditText
        android:id="@+id/edrepas"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/erepass"
        android:inputType="textPersonName|textPassword"
        android:text="Name"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="438dp" />

    <EditText
        android:id="@+id/edPass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/epass"
        android:inputType="textPersonName|textPassword"
        android:text="Name"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="367dp" />

    <EditText
        android:id="@+id/edAlamat"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/eemail"
        android:inputType="textPersonName|textEmailAddress"
        android:text="Name"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="288dp" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/ealamat"
        android:inputType="textMultiLine|textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="209dp" />

    <EditText
        android:id="@+id/edNama"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/enama"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="126dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSimpan"
        android:layout_width="83dp"
        android:layout_height="49dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:layout_editor_absoluteX="269dp"
        tools:layout_editor_absoluteY="515dp" />

</androidx.constraintlayout.widget.ConstraintLayout>