<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityHasil">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="76dp"
        android:layout_height="35dp"
        android:text="@string/tEmail"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="273dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="81dp"
        android:layout_height="36dp"
        android:text="@string/tPassword"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="366dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:text="@string/tData"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="164dp" />

    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/tEmail"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="273dp" />

    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/txPassword"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="366dp" />
</androidx.constraintlayout.widget.ConstraintLayout>